--- a/css/style.css
+++ b/css/style.css
@@ -1,23 +1,65 @@
-.catalog {
+html, body {
+    height: 100%;
+    width: 100%;
+    margin: 0;
+}
+
+.catalog-wrapper {
     text-align: center;
     font-size: 28pt;
+    height: 7%;
     color: darkblue;
 }
-.menu {
+
+.catalog {
+    padding-top: 10px;
+}
+
+.menu-wrapper {
     font-size: 22pt;
     color: darkslateblue;
-    width:20%;
+    width: 20%;
+    height: 93%;
     float: left;
-    border: 2px dashed cadetblue;
+}
+
+.menu {
+    height: 100%;
+    border-right: 2px dashed cadetblue;
     background: powderblue;
 }
-.catsphotos {
+
+.menu div {
+    margin-bottom: 20px;
+}
+
+.menu .italic {
+    font-weight: bold;
+}
+
+.menu .italic.red {
+    font-style: italic;
+}
+
+.menu .red {
+    color: red;
+}
+
+.cats-photos-wrapper {
     font-size: 20pt;
     color: #6600CC;
-    width:80%;
-    float: right;
-    border: 2px dotted darkblue;
+    width: 80%;
+    height: 93%;
+    float: left;
+    overflow: hidden;
+}
+
+.cats-photos {
+    height: 100%;
+    border-top: 2px dotted darkblue;
+    border-right: 2px dotted darkblue;
     background: powderblue;
+    overflow: auto;
 }
 
 
